# gitmnr

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts
src/: main.rs
src/main/docker/: Dockerfile.fast-jar  Dockerfile.jvm  Dockerfile.native
src/main/kotlin/io/whoz/gitmnr/: GitmnrApplication.kt
