[package]
name = "gitmnr"
version = "0.1.0"
authors = ["ptitcoutu <vincent.couturier@gmail.com>"]
description = "git monorepo operations tracker to simplify CI in monorepo"
edition = "2021"
rust-version = "1.64"
exclude = [".github/*", ".vscode/*", "assets/*"]
homepage = "https://github.com/ptitcoutu/gitmnr"
repository = "https://github.com/ptitcoutu/gitmnr"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = [
    "git",
    "cli",
    "terminal",
    "monorepo",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
backtrace = "^0.3"
chrono = { version = "^0.4", default-features = false, features = [ "clock" ] }
clap = { version = "^4.1", features = [ "env", "cargo" ] }
crossterm = { version = "^0.25", features = [ "serde" ] }
easy-cast = "^0.5"
log = "^0.4"
once_cell = "^1.17"
serde = "^1.0"
pretty_env_logger = "0.4.0"
struct-patch = "^0.2"
which = "^4.4"
git2 = "^0.16"
cmd_lib = "^1.3"
glob = "^0.3"
serde_json = "^1.0"
